--- a/No_rolling_stones.html
+++ b/No_rolling_stones.html
@@ -2,6 +2,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+<head>
+  <meta charset="UTF-8">
+  <title>nikosyfantis.com</title>
+
+  <!-- Google tag -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XNLJPFWLPW"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-XNLJPFWLPW');
+  </script>
+
+  <!-- υπόλοιπα css ή meta tags σου -->
+</head>
+
+
+
+
     <meta charset="UTF-8">
     <title>No rolling stones</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css" rel="stylesheet" />
