--- a/blog.html
+++ b/blog.html
@@ -3,6 +3,26 @@
 
 <html lang="el">
 <head>
+
+<head>
+  <meta charset="UTF-8">
+  <title>nikosyfantis.com</title>
+
+  <!-- Google tag -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XNLJPFWLPW"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-XNLJPFWLPW');
+  </script>
+
+  <!-- υπόλοιπα css ή meta tags σου -->
+</head>
+
+
+
+
 <meta charset="utf-8"/>
 <title>Blog</title>
 <style>
