--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,26 @@
 
 <html lang="en">
 <head>
+
+<head>
+  <meta charset="UTF-8">
+  <title>nikosyfantis.com</title>
+
+  <!-- Google tag -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XNLJPFWLPW"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-XNLJPFWLPW');
+  </script>
+
+  <!-- υπόλοιπα css ή meta tags σου -->
+</head>
+
+
+
+
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>n i k o s   y f a n t i s</title>
