--- a/index_en.html
+++ b/index_en.html
@@ -2,6 +2,26 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
+<head>
+  <meta charset="UTF-8">
+  <title>nikosyfantis.com</title>
+
+  <!-- Google tag -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XNLJPFWLPW"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-XNLJPFWLPW');
+  </script>
+
+  <!-- υπόλοιπα css ή meta tags σου -->
+</head>
+
+
+
+
   <link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
