--- a/index.html
+++ b/index.html
@@ -21,6 +21,18 @@
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>Ν Ι Κ Ο Σ    Υ Φ Α Ν Τ Η Σ</title>
 <style>
+ 
+@media only screen and (max-width: 600px) {
+  .site-title {
+    font-size: 24px !important;
+    letter-spacing: 4px !important;
+    text-align: center;
+    white-space: nowrap;
+  }
+}
+
+
+
 @media screen and (max-width: 768px) {
   .responsive-title {
   font-size: 5vw;
