--- a/index.html
+++ b/index.html
@@ -4,16 +4,29 @@
 <html lang="en">
 <head>
 <head>
-<meta charset="utf-8"/>
-<title>nikosyfantis.com</title>
-<!-- Google tag -->
-<script async="" src="https://www.googletagmanager.com/gtag/js?id=G-XNLJPFWLPW"></script>
-<script>
+
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+
+
+
+<head>
+  <meta charset="utf-8"/>
+  <title>nikosyfantis.com</title>
+
+  <!-- Google tag -->
+  <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-XNLJPFWLPW"></script>
+  <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
     gtag('config', 'G-XNLJPFWLPW');
   </script>
+
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet"/>
+
+  <!-- Viewport (διορθωμένο) -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 <!-- υπόλοιπα css ή meta tags σου -->
 </head>
 <link href="https://fonts.googleapis.com/css2?family=Cinzel&amp;display=swap" rel="stylesheet"/>
@@ -24,7 +37,7 @@
 
 
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 780px) {
   .responsive-title {
   font-size: 5vw;
     letter-spacing: 0.15em;
