--- a/index.html
+++ b/index.html
@@ -151,16 +151,16 @@ body {
   font-family: 'Cinzel', serif;
   color: white;
   text-align: center;
-  font-size: clamp(16px, 6vw, 48px);
-  letter-spacing: 0.25em;
-  white-space: normal;
-  overflow: visible;
-  margin: 40px auto;
-  padding: 0 6vw;
-  display: inline-block;
-  max-width: 100%;
+  font-size: clamp(12px, 10vw, 40px);
+  letter-spacing: 0.15em;
+  white-space: nowrap;
+  overflow: hidden;
+  margin: 40px auto 20px auto;
+  padding: 0 3vw;
+  display: block;
   box-sizing: border-box;
 }
+
 
 
 
