--- a/index.html
+++ b/index.html
@@ -151,15 +151,18 @@ body {
   font-family: 'Cinzel', serif;
   color: white;
   text-align: center;
-  font-size: clamp(12px, 10vw, 40px);
-  letter-spacing: 0.15em;
+  font-size: clamp(12px, 6vw, 40px);
+  letter-spacing: 0.4em;
   white-space: nowrap;
   overflow: hidden;
-  margin: 40px auto 20px auto;
-  padding: 0 3vw;
-  display: block;
+  text-overflow: ellipsis;
+  max-width: 100vw;
   box-sizing: border-box;
+  padding: 0 4vw;
+  margin: 40px auto 20px auto;
+  display: block;
 }
+
 
 
 
@@ -206,7 +209,7 @@ body {
   </head>
   <body>
     <header>
-      <h1 class="responsive-title">n i k o s&nbsp;&nbsp;&nbsp;y f a n t i s</h1>
+      <h1 class="responsive-title">NIKOS YFANTIS</h1>
 
     </header>
     <nav>
