--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ body {
   </head>
   <body>
     <header>
-      <h1 class="responsive-title">NIKOS YFANTIS</h1>
+      <h1 class="responsive-title">n i k o s&nbsp;&nbsp;&nbsp;y f a n t i s</h1>
 
     </header>
     <nav>
