--- a/index.html
+++ b/index.html
@@ -27,6 +27,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ν Ι Κ Ο Σ    Υ Φ Α Ν Τ Η Σ</title>
     <style>
+
+.header h1 {
+  font-size: clamp(24px, 6vw, 42px); /* responsive μέγεθος */
+  font-family: 'Cinzel', serif;
+  letter-spacing: 0.2em;
+  color: white;
+  text-align: center;
+  margin: 0;
+  white-space: nowrap;
+  overflow: visible;
+  text-overflow: unset;
+}
+
+
+
 @media screen and (max-width: 768px) {
   .responsive-title {
   font-size: 5vw;
