--- a/index_en.html
+++ b/index_en.html
@@ -312,6 +312,14 @@ max-width: 100%;
 overflow: hidden;
 aspect-ratio: 3/2;
 }
+
+@media screen and (orientation: portrait) and (max-width: 768px) {
+  body {
+    transform: scale(0.85);
+    transform-origin: top center;
+    width: 117.6%;
+  }
+}
 </style>
 
 
