--- a/index_en.html
+++ b/index_en.html
@@ -318,6 +318,10 @@ aspect-ratio: 3/2;
     transform: scale(0.85);
     transform-origin: top center;
     width: 117.6%;
+    overflow-x: hidden;
+    position: fixed;
+    left: 0;
+    right: 0;
   }
 }
 </style>
