--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 
 
 
- <link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap&subset=latin,greek" rel="stylesheet">
+ <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap&subset=latin,greek" rel="stylesheet">
+
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
