--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ body {
 
 
 .responsive-title {
-  font-family: 'Cinzel', serif;
+  font-family: 'EB Garamond', serif;
   color: white;
   text-align: center;
   font-size: clamp(14px, 5vw, 36px);
