--- a/index.html
+++ b/index.html
@@ -151,18 +151,18 @@ body {
   font-family: 'EB Garamond', serif;
   color: white;
   text-align: center;
-  font-size: clamp(14px, 5vw, 36px);
-  letter-spacing: 0.25em;
+  font-size: clamp(18px, 6vw, 42px);
+  letter-spacing: 0.4em;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: clip;
-  margin:40px 0 auto;
+  margin: 40px 0 auto;
   padding: 0 4vw;
   display: block;
   max-width: 100%;
   box-sizing: border-box;
-
 }
+
 
 
 
@@ -208,7 +208,8 @@ body {
   </head>
   <body>
     <header>
-      <h1 class="responsive-title">n i k o s&nbsp;&nbsp;&nbsp;y f a n t i s</h1>
+      <h1 class="responsive-title">NIKOS YFANTIS</h1>
+
 
     </header>
     <nav>
