--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
 
 
 
- <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap&subset=latin,greek" rel="stylesheet">
-
+ <link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap&subset=latin,greek" rel="stylesheet">
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -32,7 +31,7 @@
 @media screen and (max-width: 768px) {
   .responsive-title {
   font-size: 5vw;
-    letter-spacing: 0.15em;
+    letter-spacing: 0.4em;
     padding: 0 3vw;
   text-transform: uppercase;
 }
@@ -115,7 +114,7 @@ header {
 @media screen and (max-width: 768px) {
   .responsive-title {
     font-size: 5vw;
-    letter-spacing: 0.15em;
+    letter-spacing: 0.4em;
     padding: 0 3vw;
   }
 
@@ -148,21 +147,21 @@ body {
 
 
 .responsive-title {
-  font-family: 'EB Garamond', serif;
+  font-family: 'Cinzel', serif;
   color: white;
   text-align: center;
-  font-size: clamp(18px, 6vw, 42px);
+  font-size: clamp(14px, 5vw, 36px);
   letter-spacing: 0.4em;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: clip;
-  margin: 40px 0 auto;
+  margin:40px 0 auto;
   padding: 0 4vw;
   display: block;
   max-width: 100%;
   box-sizing: border-box;
-}
 
+}
 
 
 
@@ -209,7 +208,6 @@ body {
   <body>
     <header>
       <h1 class="responsive-title">NIKOS YFANTIS</h1>
-
 
     </header>
     <nav>
