--- a/Guca.html
+++ b/Guca.html
@@ -138,7 +138,7 @@
 <a href="Guca/photo30.jpg" data-lightbox="gallery"><img src="Guca/photo30.jpg" class="gallery-img"/></a>
 <a href="Guca/photo31.jpg" data-lightbox="gallery"><img src="Guca/photo31.jpg" class="gallery-img"/></a>
 <a href="Guca/photo32.jpg" data-lightbox="gallery"><img src="Guca/photo32.jpg" class="gallery-img"/></a>
-
+<a href="Guca/photo33.jpg" data-lightbox="gallery"><img src="Guca/photo33.jpg" class="gallery-img"/></a>
 
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox-plus-jquery.min.js"></script>
