--- a/patra.html
+++ b/patra.html
@@ -136,6 +136,8 @@
 <a href="patra/photo28.jpg" data-lightbox="gallery"><img src="patra/photo28.jpg" class="gallery-img"/></a>
 <a href="patra/photo29.jpg" data-lightbox="gallery"><img src="patra/photo29.jpg" class="gallery-img"/></a>
 <a href="patra/photo30.jpg" data-lightbox="gallery"><img src="patra/photo30.jpg" class="gallery-img"/></a>
+<a href="patra/photo31.jpg" data-lightbox="gallery"><img src="patra/photo31.jpg" class="gallery-img"/></a>
+<a href="patra/photo32.jpg" data-lightbox="gallery"><img src="patra/photo32.jpg" class="gallery-img"/></a>
 
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox-plus-jquery.min.js"></script>
