--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ body {
   </head>
   <body>
     <header>
-      <h1 class="responsive-title">NIKOS YFANTIS</h1>
+      <h1 class="responsive-title">ΝΙΚΟΣ ΥΦΑΝΤΗΣ</h1>
 
     </header>
     <nav>
