--- a/alexia.html
+++ b/alexia.html
@@ -134,6 +134,9 @@
 <a href="alexia/photo27.jpg" data-lightbox="gallery"><img src="alexia/photo27.jpg" class="gallery-img"/></a>
 <a href="alexia/photo28.jpg" data-lightbox="gallery"><img src="alexia/photo28.jpg" class="gallery-img"/></a>
 <a href="alexia/photo29.jpg" data-lightbox="gallery"><img src="alexia/photo29.jpg" class="gallery-img"/></a>
+<a href="alexia/photo30.jpg" data-lightbox="gallery"><img src="alexia/photo30.jpg" class="gallery-img"/></a>
+<a href="alexia/photo31.jpg" data-lightbox="gallery"><img src="alexia/photo31.jpg" class="gallery-img"/></a>
+<a href="alexia/photo32.jpg" data-lightbox="gallery"><img src="alexia/photo32.jpg" class="gallery-img"/></a>
 
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox-plus-jquery.min.js"></script>
