--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
 
 
 
- <link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap&subset=latin,greek" rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ν Ι Κ Ο Σ    Υ Φ Α Ν Τ Η Σ</title>
@@ -31,7 +30,7 @@
 @media screen and (max-width: 768px) {
   .responsive-title {
   font-size: 5vw;
-    letter-spacing: 0.4em;
+    letter-spacing: 0.15em;
     padding: 0 3vw;
   text-transform: uppercase;
 }
@@ -114,7 +113,7 @@ header {
 @media screen and (max-width: 768px) {
   .responsive-title {
     font-size: 5vw;
-    letter-spacing: 0.4em;
+    letter-spacing: 0.15em;
     padding: 0 3vw;
   }
 
@@ -151,7 +150,7 @@ body {
   color: white;
   text-align: center;
   font-size: clamp(14px, 5vw, 36px);
-  letter-spacing: 0.4em;
+  letter-spacing: 0.25em;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: clip;
@@ -207,7 +206,7 @@ body {
   </head>
   <body>
     <header>
-      <h1 class="responsive-title">ΝΙΚΟΣ ΥΦΑΝΤΗΣ</h1>
+      <h1 class="responsive-title">n i k o s&nbsp;&nbsp;&nbsp;y f a n t i s</h1>
 
     </header>
     <nav>
@@ -366,5 +365,9 @@ document.addEventListener('DOMContentLoaded', async () => {
 
 
 
+
+  <footer style="background-color: #1a1a1a; color: white; text-align: center; padding: 10px 0; font-family: Arial, sans-serif; font-size: 14px;">
+    © 2025 Nikos Yfantis. All rights reserved.
+  </footer>
 </body>
 </html>
