--- a/index_en.html
+++ b/index_en.html
@@ -31,7 +31,7 @@
 @media screen and (max-width: 768px) {
   .responsive-title {
   font-size: 5vw;
-    letter-spacing: 0.15em;
+    letter-spacing: 0.4em;
     padding: 0 3vw;
   text-transform: uppercase;
 }
@@ -114,7 +114,7 @@
 @media screen and (max-width: 768px) {
   .responsive-title {
     font-size: 5vw;
-    letter-spacing: 0.15em;
+    letter-spacing: 0.4em;
     padding: 0 3vw;
   }
 
@@ -150,7 +150,7 @@ body {
   color: white;
   text-align: center;
   font-size: clamp(14px, 5vw, 36px);
-  letter-spacing: 0.25em;
+  letter-spacing: 0.4em;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: clip;
@@ -220,7 +220,7 @@ nav a:hover {
   </head>
   <body>
     <header>
-      <h1 class="responsive-title">n i k o s&nbsp;&nbsp;&nbsp;y f a n t i s</h1>
+      <h1 class="responsive-title">NIKOS YFANTIS</h1>
     </header>
     <nav>
       <a href="index_en.html">HOME</a>
@@ -360,6 +360,27 @@ slides[slideIndex].style.opacity = 1;
 }
 </script>
 
+<script>
+// Απενεργοποίηση δεξιού κλικ
+document.addEventListener('contextmenu', event => event.preventDefault());
+
+// Απενεργοποίηση drag & drop στις εικόνες
+document.addEventListener('DOMContentLoaded', () => {
+  const imgs = document.querySelectorAll('img');
+  imgs.forEach(img => {
+    img.setAttribute('draggable', 'false');
+    img.addEventListener('dragstart', e => e.preventDefault());
+  });
+});
+
+// Απενεργοποίηση αντιγραφής
+document.addEventListener('copy', e => e.preventDefault());
+document.addEventListener('cut', e => e.preventDefault());
+</script>
+
+<footer style="background-color: #1a1a1a; color: white; text-align: center; padding: 10px 0; font-family: Arial, sans-serif; font-size: 14px;">
+  © 2025 Nikos Yfantis. All rights reserved.
+</footer>
 
 
 
