--- a/words_en.html
+++ b/words_en.html
@@ -202,7 +202,22 @@ And that will never change, no matter what humans discover...</h2><div class="da
       admires the view from above<br>
       swaying to the rhythm.<br><br>
 
-      Tatátara… taratatáraaa.
+      Tatátara… taratatáraaa...''<br><br>
+
+      How I wish it were real.<br>
+      But it isn’t.<br>
+      It’s an illusion,<br>
+      a dreamlike extract...<br>
+      an image born out of nothing.<br>
+      Or maybe not?
+    </h2>
+    <div class="date">📅 September 2, 2025</div>
+  </div>
+  <div class="image-block">
+    <img alt="tsirko" src="blog/Tsirko.jpg" style="max-width: 100%; margin-top: 20px;" />
+  </div>
+</div>
+
 
 
 
