--- a/words.html
+++ b/words.html
@@ -165,9 +165,9 @@
 κι η θάλασσα στα μέτρα μου...""<br><br>
 
 
-
-'Τατατάρα… ταρατατάραααα...<br>
-ακούς τη μουσική;<br>
+Και κάτι δικό μου...
+'Τατατάρα… ταρατατάραααα...<br><br>
+Aκούς τη μουσική;<br>
 Μια παρέλαση χωρίς θεατές<br>
 τα πόδια βυθίζονται στην άμμο<br>
 αλλά η χαρά επιπλέει.<br>
