--- a/words_en.html
+++ b/words_en.html
@@ -179,7 +179,8 @@ And that will never change, no matter what humans discover...</h2><div class="da
       and acrobats constantly train—<br>
       You never know when a show might happen.<br><br>
 
-        And something mine..........<br>
+      
+      And something mine..........<br><br>
       Tatátara… taratatáraaa...<br><br>
 
       A march without sorrow,<br>
