--- a/words_en.html
+++ b/words_en.html
@@ -170,6 +170,7 @@ And that will never change, no matter what humans discover...</h2><div class="da
       The sky is mine,<br>
       and the sea fits me..."<br><br>
 
+       And something mine..........<br><br>
       'Tatátara… taratatáraaa...<br>
       Do you hear the music?<br>
       A parade with no spectators,<br>
@@ -179,8 +180,6 @@ And that will never change, no matter what humans discover...</h2><div class="da
       and acrobats constantly train—<br>
       You never know when a show might happen.<br><br>
 
-      
-      And something mine..........<br><br>
       Tatátara… taratatáraaa...<br><br>
 
       A march without sorrow,<br>
@@ -213,7 +212,7 @@ And that will never change, no matter what humans discover...</h2><div class="da
       an image born out of nothing.<br>
       Or maybe not?
     </h2>
-    <div class="date">📅 September 2, 2025</div>
+    <div class="date">📅 September 2, 2025 ***************************************************************</div>
   </div>
   <div class="image-block">
     <img alt="tsirko" src="blog/Tsirko.jpg" style="max-width: 100%; margin-top: 20px;" />
