--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
 
   <link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet">
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ν Ι Κ Ο Σ    Υ Φ Α Ν Τ Η Σ</title>
@@ -30,7 +31,7 @@
 @media screen and (max-width: 768px) {
   .responsive-title {
   font-size: 5vw;
-    letter-spacing: 0.15em;
+    letter-spacing: 0.4em;
     padding: 0 3vw;
   text-transform: uppercase;
 }
@@ -66,7 +67,7 @@
         margin: 0;
         font-family: Arial, sans-serif;
       }
-header {
+      header {
         background-color: black;
         color: white;
         padding: 20px;
@@ -113,7 +114,7 @@ header {
 @media screen and (max-width: 768px) {
   .responsive-title {
     font-size: 5vw;
-    letter-spacing: 0.15em;
+    letter-spacing: 0.4em;
     padding: 0 3vw;
   }
 
@@ -150,7 +151,7 @@ body {
   color: white;
   text-align: center;
   font-size: clamp(14px, 5vw, 36px);
-  letter-spacing: 0.25em;
+  letter-spacing: 0.4em;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: clip;
@@ -179,16 +180,17 @@ body {
       }
       nav a {
   font-size: 12px;
-  padding: 8px 12px;
-        color: white;
-        padding: 14px 20px;
-        text-decoration: none;
-        text-transform: uppercase;
+  padding: 14px 20px;
+  color: white;
+  text-decoration: none;
+  text-transform: uppercase;
+ }
+
+ nav a:hover {
+  background-color: #555;
       }
-      nav a:hover {
-        background-color: #555;
-      }
-     .hero {
+
+.hero {
   width: 100%;
   aspect-ratio: 16 / 9;
   margin: 40px auto;
@@ -199,15 +201,29 @@ body {
   transition: background-image 1s ease-in-out;
 }
  
+<style>
+.language-switcher {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  z-index: 9999;
+}
 
-
+.language-switcher .flag {
+  width: 28px;
+  height: auto;
+  margin-left: 8px;
+  cursor: pointer;
+  border: 1px solid white;
+  border-radius: 3px;
+}
 </style>
+
 
   </head>
   <body>
     <header>
-      <h1 class="responsive-title">n i k o s&nbsp;&nbsp;&nbsp;y f a n t i s</h1>
-
+      <h1 class="responsive-title">ΝΙΚΟΣ ΥΦΑΝΤΗΣ</h1>
     </header>
     <nav>
       <a href="index.html">ΑΡΧΙΚΗ</a>
@@ -281,93 +297,94 @@ setInterval(showNextSlide, 4000);
 window.onload = showNextSlide;
 </script>
     
-<script>
-document.addEventListener('DOMContentLoaded', async () => {
-  try {
-    // --- 1) Φόρτωσε projects.html (πρέπει να είναι στον ίδιο φάκελο με το index.html)
-    const res = await fetch('projects.html', { cache: 'no-store' });
-    if (!res.ok) throw new Error('Cannot fetch projects.html');
-    const html = await res.text();
-    const doc = new DOMParser().parseFromString(html, 'text/html');
+<style>
+.mySlides {
+display: none;
+width: 100%;
+height: auto;
+transition: opacity 1.5s ease-in-out;
+position: absolute;
+top: 0;
+left: 0;
+}
 
-    // Πάρε ΟΛΑ τα links σε σελίδες project, με τη σειρά που φαίνονται
-    const links = [...doc.querySelectorAll('a[href$=".html"]')];
-    const projects = links.map(a => ({
-      href: a.getAttribute('href'),
-      title: (a.textContent || '').trim(),
-      folder: a.getAttribute('href').replace(/\.html$/,'') // "Project Name.html" -> "Project Name"
-    })).filter(p => p.href && p.title && p.folder);
 
-    if (!projects.length) { console.warn('[SLIDESHOW] no projects found'); return; }
+.slideshow-container {
+position: relative;
+max-width: 100%;
+overflow: hidden;
+aspect-ratio: 3/2;
+}
 
-    // --- 2) Βρες τις εικόνες του slider που δείχνουν στο φάκελο "index/slideN.ext"
-    const slideImgs = [...document.querySelectorAll('img')].filter(img => {
-      const s = (img.getAttribute('src') || '');
-      return /(^|\/)index\/slide\d+\.(jpe?g|png|webp)$/i.test(s);
-    });
-
-    if (!slideImgs.length) { console.warn('[SLIDESHOW] no slide images like index/slideN found'); return; }
-
-    // --- 3) Αντιστοίχιση 1:1: slide #i -> project #i
-    const count = Math.min(slideImgs.length, projects.length);
-
-    for (let i = 0; i < count; i++) {
-      const img = slideImgs[i];
-      const p = projects[i];
-
-      // Τυχαίο N (1..30)
-      const n = 1 + Math.floor(Math.random() * 30);
-
-      // Δοκίμασε jpg/JPG -> fallback στο photo1
-      const candidateJpg = `${p.folder}/photo${n}.jpg`;
-      const candidateJPG = `${p.folder}/photo${n}.JPG`;
-      const fallback     = `${p.folder}/photo1.jpg`;
-
-      // ALT
-      img.alt = p.title;
-
-      // Αν υπάρχει ΔΙΚΗ ΣΟΥ λεζάντα στο ίδιο slide (όχι προσθήκη νέου DOM), γράψε τίτλο
-      const slideRoot = img.closest('.caption, .slide, .mySlides, .swiper-slide, .slick-slide, .glide__slide, li, div');
-      if (slideRoot) {
-        // Προσπάθησε να βρεις ήδη υπάρχον caption element
-        const cap = slideRoot.querySelector('.caption, .slide-caption, .title, .caption-text');
-        if (cap) cap.textContent = p.title;
-      }
-
-      // Αν το img είναι μέσα σε <a>, κάνε το link να οδηγεί στη σελίδα του project
-      const a = img.closest('a');
-      if (a && p.href) a.href = p.href;
-
-      // Φόρτωσε candidate -> αν αποτύχει δοκίμασε JPG -> αλλιώς γύρνα σε photo1
-      let triedUpper = false;
-      img.onerror = () => {
-        if (!triedUpper) {
-          triedUpper = true;
-          img.onerror = () => { img.onerror = null; img.src = fallback; };
-          img.src = candidateJPG;
-        } else {
-          img.onerror = null;
-          img.src = fallback;
-        }
-      };
-      img.src = candidateJpg;
-    }
-
-    // Αν έχεις περισσότερα slides από projects, τα υπόλοιπα μένουν ως έχουν (από index/slideN)
-    console.log('[SLIDESHOW] updated', Math.min(slideImgs.length, projects.length), 'slides');
-
-  } catch (err) {
-    console.warn('[SLIDESHOW] error:', err);
+@media screen and (orientation: portrait) and (max-width: 768px) {
+  body {
+    transform: scale(0.85);
+    transform-origin: top center;
+    width: 117.6%;
   }
-});
+}
+
+@media screen and (orientation: portrait) and (max-width: 768px) {
+  html, body {
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    width: 100vw;
+    height: 100vh;
+    transform: scale(0.85);
+    transform-origin: top center;
+    position: fixed;
+    left: 0;
+    top: 0;
+  }
+}
+</style>
+
+
+
+<script>
+let slideIndex = 0;
+const slides = document.getElementsByClassName("mySlides");
+if (slides.length > 0) {
+slides[0].style.display = "block";
+slides[0].style.opacity = 1;
+setInterval(() => {
+slides[slideIndex].style.opacity = 0;
+setTimeout(() => {
+slides[slideIndex].style.display = "none";
+slideIndex = (slideIndex + 1) % slides.length;
+slides[slideIndex].style.display = "block";
+setTimeout(() => {
+slides[slideIndex].style.opacity = 1;
+}, 100);
+}, 1000);
+}, 5000); // Κάθε 5 δευτερόλεπτα
+}
 </script>
 
+<script>
+// Απενεργοποίηση δεξιού κλικ
+document.addEventListener('contextmenu', event => event.preventDefault());
+
+// Απενεργοποίηση drag & drop στις εικόνες
+document.addEventListener('DOMContentLoaded', () => {
+  const imgs = document.querySelectorAll('img');
+  imgs.forEach(img => {
+    img.setAttribute('draggable', 'false');
+    img.addEventListener('dragstart', e => e.preventDefault());
+  });
+});
+
+// Απενεργοποίηση αντιγραφής
+document.addEventListener('copy', e => e.preventDefault());
+document.addEventListener('cut', e => e.preventDefault());
+</script>
+
+<footer style="background-color: #1a1a1a; color: white; text-align: center; padding: 10px 0; font-family: Arial, sans-serif; font-size: 14px;">
+  © 2025 Nikos Yfantis. All rights reserved.
+</footer>
 
 
 
-
-  <footer style="background-color: #1a1a1a; color: white; text-align: center; padding: 10px 0; font-family: Arial, sans-serif; font-size: 14px;">
-    © 2025 Nikos Yfantis. All rights reserved.
-  </footer>
 </body>
 </html>
