--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     gtag('config', 'G-XNLJPFWLPW');
   </script>
 
+  <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
   <!-- υπόλοιπα css ή meta tags σου -->
 </head>
 
@@ -65,7 +66,7 @@
       body {
   background-color: black;
         margin: 0;
-        font-family: Arial, sans-serif;
+        font-family: 'Lato', sans-serif;
       }
       header {
         background-color: black;
@@ -142,12 +143,12 @@
 body {
   background-color: black;
   margin: 0;
-  font-family: Arial, sans-serif;
+  font-family: 'Lato', sans-serif;
 }
 
 
 .responsive-title {
-  font-family: 'Cinzel', serif;
+  font-family: 'Lato', sans-serif;
   color: white;
   text-align: center;
   font-size: clamp(14px, 5vw, 36px);
@@ -380,7 +381,7 @@ document.addEventListener('copy', e => e.preventDefault());
 document.addEventListener('cut', e => e.preventDefault());
 </script>
 
-<footer style="background-color: #1a1a1a; color: white; text-align: center; padding: 10px 0; font-family: Arial, sans-serif; font-size: 14px;">
+<footer style="background-color: #1a1a1a; color: white; text-align: center; padding: 10px 0; font-family: 'Lato', sans-serif; font-size: 14px;">
   © 2025 Nikos Yfantis. All rights reserved.
 </footer>
 
