--- a/index_en.html
+++ b/index_en.html
@@ -22,7 +22,7 @@
 
 
 
-<link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap&subset=latin,greek" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -65,7 +65,7 @@
       body {
   background-color: black;
         margin: 0;
-        font-family: Arial, sans-serif;
+        font-family: 'Lato', sans-serif;
       }
       header {
         background-color: black;
@@ -142,11 +142,11 @@
 body {
   background-color: black;
   margin: 0;
-  font-family: Arial, sans-serif;
+  font-family: 'Lato', sans-serif;
 }
 
 .responsive-title {
-  font-family: 'Cinzel', serif;
+  font-family: 'Lato', sans-serif;
   color: white;
   text-align: center;
   font-size: clamp(14px, 5vw, 36px);
@@ -378,7 +378,7 @@ document.addEventListener('copy', e => e.preventDefault());
 document.addEventListener('cut', e => e.preventDefault());
 </script>
 
-<footer style="background-color: #1a1a1a; color: white; text-align: center; padding: 10px 0; font-family: Arial, sans-serif; font-size: 14px;">
+<footer style="background-color: #1a1a1a; color: white; text-align: center; padding: 10px 0; font-family: 'Lato', sans-serif; font-size: 14px;">
   © 2025 Nikos Yfantis. All rights reserved.
 </footer>
 
