--- a/projects_en.html
+++ b/projects_en.html
@@ -26,7 +26,7 @@
   <title>MY WORK</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: Lato, sans-serif;
       margin: 0;
       background-color: #f9f9f9;
     }
@@ -225,7 +225,7 @@ document.addEventListener('copy', e => e.preventDefault());
 document.addEventListener('cut', e => e.preventDefault());
 </script>
 
-<footer style="background-color: #1a1a1a; color: white; text-align: center; padding: 10px 0; font-family: Arial, sans-serif; font-size: 14px;">
+<footer style="background-color: #1a1a1a; color: white; text-align: center; padding: 10px 0; font-family: Lato, sans-serif; font-size: 14px;">
   © 2025 Nikos Yfantis. All rights reserved.
 </footer>
 
