--- a/blog.html
+++ b/blog.html
@@ -3,6 +3,7 @@
 
 <html lang="el">
 <head>
+<link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
 
 <head>
   <meta charset="UTF-8">
@@ -29,7 +30,7 @@
         body {
             background-color: #111;
             color: #eee;
-            font-family: 'Georgia', serif;
+            font-family: 'Lato', sans-serif;
             margin: 0;
             padding: 40px;
             max-width: 800px;
@@ -253,7 +254,7 @@ document.addEventListener('copy', e => e.preventDefault());
 document.addEventListener('cut', e => e.preventDefault());
 </script>
 
-<footer style="background-color: #1a1a1a; color: white; text-align: center; padding: 10px 0; font-family: Arial, sans-serif; font-size: 14px;">
+<footer style="background-color: #1a1a1a; color: white; text-align: center; padding: 10px 0; font-family: 'Lato', sans-serif; font-size: 14px;">
   © 2025 Nikos Yfantis. All rights reserved.
 </footer>
 
