--- a/index_en.html
+++ b/index_en.html
@@ -2,6 +2,22 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+<link rel="preload" as="image" href="index/slide1.jpg">
+<link rel="preload" as="image" href="index/slide2.jpg">
+<link rel="preload" as="image" href="index/slide3.jpg">
+<link rel="preload" as="image" href="index/slide4.jpg">
+<link rel="preload" as="image" href="index/slide5.jpg">
+<link rel="preload" as="image" href="index/slide6.jpg">
+<link rel="preload" as="image" href="index/slide7.jpg">
+<link rel="preload" as="image" href="index/slide8.jpg">
+<link rel="preload" as="image" href="index/slide9.jpg">
+<link rel="preload" as="image" href="index/slide10.jpg">
+<link rel="preload" as="image" href="index/slide11.jpg">
+<link rel="preload" as="image" href="index/slide12.jpg">
+<link rel="preload" as="image" href="index/slide13.jpg">
+<link rel="preload" as="image" href="index/slide14.jpg">
+<link rel="preload" as="image" href="index/slide15.jpg">
+<link rel="preload" as="image" href="index/slide16.jpg">
 
 <head>
   <meta charset="UTF-8">
@@ -233,10 +249,10 @@ nav a:hover {
 
 <div class="language-switcher">
   <a href="index.html">
-    <img src="27105.png" alt="Greek" class="flag">
+    <img src="27105.png" alt="Greek" class="flag" loading="lazy">
   </a>
   <a href="index_en.html">
-    <img src="18166.png" alt="English" class="flag">
+    <img src="18166.png" alt="English" class="flag" loading="lazy">
   </a>
 </div>
 
