--- a/Guca.html
+++ b/Guca.html
@@ -102,6 +102,42 @@
 }
 </style>
 
+<section class="project-description" style="max-width: 1100px; margin: 0 auto; padding: 0; font-family: 'Lato', sans-serif; font-size: 15px; line-height: 1.3; color: #dddddd; font-style: italic; text-align: left;">
+
+
+  <p>
+    <br>
+* 🇬🇷 *   Η Guča  είναι ένα γραφικό χωριό στη δυτική Σερβία
+(περιοχή Dragačevo)3185 κατοίκων, γνωστό κυρίως για το περίφημο Guča Trumpet Festival.<br>
+Βρίσκεται περίπου 30 χλμ. από την πόλη Čačak, στο δήμο Lučani, στη Moravica.<br>
+Το Guča Trumpet Festival, επίσης γνωστό ως Dragačevski sabor,
+ή Dragačevo Assembly of Trumpet Players ξεκίνησε το 1961, όταν 4 μπάντες τρομπέτας
+από χωριά της γύρω περιοχής συγκεντρώθηκαν στην αυλή της εκκλησίας.
+Τις μέρες του φεστιβάλ το χωριό των 3.000 κατοίκων κάθε χρόνο γεμίζει από 300.000
+έως και 600.000 επισκέπτες, από τη Σερβία και το εξωτερικό.
+Έχει εξελιχθεί σε ένα από τα σημαντικότερα παραδοσιακά και μουσικά φεστιβάλ όχι μόνο στη Σερβία αλλά και στα Βαλκάνια. Περιλαμβάνει παραδοσιακές μουσικές, χορούς kolo, 
+μία έντονη πολιτιστική ατμόσφαιρα και πολύ μουσική δρόμου αλλά και μεγάλο 
+φωτογραφικό ενδιαφέρον. <br>
+Το φεστιβάλ διατηρεί ελεύθερη είσοδο, αυθεντική αίσθηση και παραδοσιακό χαρακτήρα,
+με μεγάλη έμφαση στη συμμετοχικότητα και την παράδοση.<br><br><br>
+
+
+* 🇬🇧 *   Guča is a picturesque village in western Serbia
+(Dragačevo region) with a population of 3,185, best known for the world-famous Guča Trumpet Festival.<br>
+It is located about 30 km from the city of Čačak, within the municipality of Lučani, in the Moravica District.<br>
+The Guča Trumpet Festival, also known as Dragačevski sabor
+or the Dragačevo Assembly of Trumpet Players, began in 1961,
+when four local brass bands gathered in the churchyard of the village.
+During the festival days, this small village of 3,000 people fills with 300,000 to 600,000 visitors each year,
+coming from all over Serbia and abroad.
+The event has evolved into one of the most important traditional and musical festivals
+not only in Serbia but throughout the Balkans.
+It features traditional music, the *kolo* folk dance,
+a vibrant cultural atmosphere and plenty of street music—
+making it a highly attractive subject for photography as well.<bρ>
+The festival maintains free entry, an authentic feel and a strong traditional character,
+placing great emphasis on participation, community and cultural heritage.<br><br>
+</section>
 
 
     <h1>Guca</h1>
