--- a/Whispers of my life.html
+++ b/Whispers of my life.html
@@ -104,7 +104,49 @@
 }
 </style>
 
-
+<section <div style="max-width: 1100px; margin: 0 auto; display: flex; justify-content: space-between; font-family: 'Lato', sans-serif; font-size: 15px; line-height: 1.5; padding: 20px 0;">
+  <div style="width: 48%; text-align: left;">
+    * 🇬🇷 * <br>
+    ΝΤΙΝ! Πρώτος ψίθυρος<br>
+    Τα τσιγάρα σβήνουν.<br>
+    Οι καρδιές χτυπούν γρηγορότερα.<br>
+    Προσδοκία για το άγνωστο.<br>
+    Ελπίδα για το ουσιαστικό.<br>
+    ΝΤΙΝ!! Δεύτερος ψίθυρος<br>
+    Οι σκιές παίρνουν θέσεις.<br>
+    Το φως διαλέγει πού θα καθίσει.<br>
+    Η φωτογραφία γεννιέται.<br>
+    ΝΤΙΝ!!! Τρίτος ψίθυρος<br>
+    Ένας τελετουργικός ήχος πριν την πρώτη αναπνοή.<br>
+    Παρακαλούμε, απενεργοποιήστε τα κινητά σας.<br>
+    Αν χρειαστεί, ξεχάστε ότι υπάρχουν.<br>
+    Το θερμό σας χειροκρότημα<br>
+    αναγκαίο για μια καλή αρχή.<br>
+    Για μια ζωή γεμάτη ψιθύρους.<br>
+    Η αυλαία ανοίγει...<br><br>
+  </div>
+  <div style="width: 48%; text-align: right;">
+    * 🇬🇧 * <br>  
+    DING! First whisper<br>
+    Cigarettes go out.<br>
+    Hearts beat faster.<br>
+    Anticipation for the unknown.<br>
+    Hope for the meaningful.<br>
+    DING!! Second whisper<br>
+    Shadows take their places.<br>
+    Light chooses where to sit.<br>
+    Photography is born.<br>
+    DING!!! Third whisper<br>
+    A ritual sound before the first breath.<br>
+    Please turn off your mobile phones.<br>
+    If necessary, forget they exist.<br>
+    Your warm applause<br>
+    is essential for a good beginning.<br>
+    For a life full of whispers.<br>
+    The curtain rises...<br>
+  </div>
+</div>
+</section>
 
     <h1>Whispers Of My Life</h1>
     <div style="display: flex; flex-wrap: wrap; justify-content: center;">
