--- a/konstantinopoli.html
+++ b/konstantinopoli.html
@@ -22,7 +22,7 @@
 
 
     <meta charset="UTF-8">
-    <title>Konstantinopoli</title>
+    <title>Konstantinoupoli</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css" rel="stylesheet" />
 
 <style>
@@ -104,7 +104,7 @@
 
 
 
-    <h1>Konstantinopoli</h1>
+    <h1>Konstantinoupoli</h1>
     <div style="display: flex; flex-wrap: wrap; justify-content: center;">
         <a href="konstantinopoli/photo1.jpg" data-lightbox="gallery"><img src="konstantinopoli/photo1.jpg" class="gallery-img"/></a>
 <a href="konstantinopoli/photo2.jpg" data-lightbox="gallery"><img src="konstantinopoli/photo2.jpg" class="gallery-img"/></a>
