--- a/topia.html
+++ b/topia.html
@@ -102,6 +102,42 @@
 }
 </style>
 
+<section <div style="max-width: 1100px; margin: 0 auto; display: flex; justify-content: space-between; font-family: 'Lato', sans-serif; font-size: 15px; line-height: 1.5; padding: 20px 0;">
+  <div style="width: 48%; text-align: left;">
+    * 🇬🇷 * <br>
+    Μέσ’ στις ομίχλες ψιθυρίζει η γη.<br>
+    Κρύβει τα μεγάλα λόγια<br>
+    μέσα στις σταγόνες της πρωινής δροσιάς.<br>
+    Αφήνει μόνο τα σχήματα να μιλήσουν,<br>
+    και τα πλάσματά της.<br>
+    Φυτά και ζώα, άσπρα και μαύρα.<br>
+    Αρκεί κανείς να στήσει αυτί και θ’ ακούσει.<br>
+    Αλλά κανείς δεν ακούει.<br>
+    Ακόμα και η αστραπή, ψίθυρος είναι βουβός.<br>
+    Φωνάζει «Αγαπήστε με»,<br>
+    μα ήχος δεν ακούγεται.<br>
+    Και η βροντή σιωπή είναι.<br>
+  </div>
+  <div style="width: 48%; text-align: right;">
+    * 🇬🇧 * <br>  
+    Within the mists, the earth whispers.<br>
+    It hides grand words<br>
+    within the drops of morning dew.<br>
+    It lets only shapes speak,<br>
+    and its creatures.<br>
+    Plants and animals, black and white.<br>
+    One only needs to listen closely, and they will hear.<br>
+    But no one listens.<br>
+    Even lightning is a voiceless whisper.<br>
+    It shouts “Love me,”<br>
+    yet no sound is heard.<br>
+    And thunder is silence too.<br>
+  </div>
+</div>
+</section>
+
+
+
 
     <h1>LANDSCAPES</h1>
     <div style="display: flex; flex-wrap: wrap; justify-content: center;">
