--- a/alexia.html
+++ b/alexia.html
@@ -100,6 +100,21 @@
   }
 }
 </style>
+<section class="project-description" style="max-width: 1100px; margin: 0 auto; padding: 0; font-family: 'Lato', sans-serif; font-size: 15px; line-height: 1.3; color: #dddddd; font-style: italic; text-align: left;">
+
+
+  <p>
+    <br>
+* 🇬🇷 *   
+Κάποιοι άνθρωποι σημαδεύουν την ζωή μας για πάντα.<br>
+Σε ευχαριστώ για όλα Αλεξία Τούλιου.<br><br>
+
+
+* 🇬🇧 *  
+Some people leave a mark on our lives forever.<br>
+Thank you for everything, Alexia Touliou.<br><br>
+
+</section>
 
 
 
