--- a/topia.html
+++ b/topia.html
@@ -113,6 +113,7 @@
     Φυτά και ζώα, άσπρα και μαύρα.<br>
     Αρκεί κανείς να στήσει αυτί και θ’ ακούσει.<br>
     Αλλά κανείς δεν ακούει.<br>
+    Πόσο μικροί. Πόσο ασήμαντοι.
     Ακόμα και η αστραπή, ψίθυρος είναι βουβός.<br>
     Φωνάζει «Αγαπήστε με»,<br>
     μα ήχος δεν ακούγεται.<br>
@@ -128,6 +129,7 @@
     Plants and animals, black and white.<br>
     One only needs to listen closely, and they will hear.<br>
     But no one listens.<br>
+    How small. How insignificant?
     Even lightning is a voiceless whisper.<br>
     It shouts “Love me,”<br>
     yet no sound is heard.<br>
