--- a/santorini.html
+++ b/santorini.html
@@ -104,6 +104,25 @@
 </style>
 
 
+<section class="project-description" style="max-width: 1100px; margin: 0 auto; padding: 0; font-family: 'Lato', sans-serif; font-size: 15px; line-height: 1.3; color: #dddddd; font-style: italic; text-align: left;">
+
+
+  <p>
+    <br>
+* 🇬🇷 * <br>
+Κάθε Μεγάλη Παρασκευή, το χωριό Πύργος της Σαντορίνης μετατρέπεται σε ένα φωτεινό σκηνικό. Xιλιάδες τενεκεδένια φαναράκια τοποθετούνται σε ταράτσες, σοκάκια και αυλές, ενώ οι καμπάνες χτυπούν πένθιμα. Το αγαπημένο έθιμο των «ντενεκεδακίων», που είναι φτιαγμένα από παραφίνη και ροκανίδια, φωτίζει τη νύχτα της πομπής του Επιταφίου και διατηρείται αναμμένο έως το πρωί.<br>
+Το πανέμορφο αυτό χωριό, με μόλις 1.800–2.000 κατοίκους, ζει την ομορφιά της παράδοσης με τη συμμετοχή πλήθους εθελοντών και επισκεπτών. Μια ιστορία πίστης, φαντασίας και φωτός, αιώνων, που αποτυπώνεται σε κάθε φωτεινή στιγμή της νύχτας του Πάσχα. <br>
+Προσπάθησα οι φωτογραφίες μου να ξεφεύγουν από τις συνηθισμένες εντυπωσιακές καρτποστάλ που κυκλοφορούν παντού στο διαδίκτυο και αυτή είναι η δική μου ματιά.<br><br><br>
+
+
+* 🇬🇧 * ><br>
+Every Good Friday, the village of Pyrgos in Santorini is transformed into a luminous spectacle.Thousands of tin lanterns are placed on rooftops, alleyways, and courtyards, as the church bells toll mournfully.The beloved tradition of the “tenekedakia”—handmade lanterns crafted from paraffin and wood shavings—illuminates the night of the Epitaphios procession and stays alight until dawn.<br>
+This beautiful village, with just 1,800–2,000 inhabitants, embraces the magic of tradition through the dedication of volunteers and the awe of countless visitors. A story of faith, imagination, and light—echoing through the centuries—captured in every glowing moment of Easter night.<br>
+I tried to let my photographs drift away from the usual dazzling postcards that flood the internet.
+This is my own gaze.<br><br>
+</section>
+
+
 
     <h1>Santorini</h1>
     <div style="display: flex; flex-wrap: wrap; justify-content: center;">
