--- a/alexia.html
+++ b/alexia.html
@@ -189,13 +189,11 @@
   <p>
     <br>
 * 🇬🇷 *   
-Κάποιοι άνθρωποι σημαδεύουν την ζωή μας για πάντα.<br>
-Σε ευχαριστώ για όλα Αλεξία Τούλιου.<br><br>
+Κάποιοι άνθρωποι σημαδεύουν την ζωή μας για πάντα.<br><br>
 
 
 * 🇬🇧 *  
-Some people leave a mark on our lives forever.<br>
-Thank you for everything, Alexia Touliou.<br><br>
+Some people leave a mark on our lives forever.<br><br>
 
 </section>
 
