--- a/Whispers of my life.html
+++ b/Whispers of my life.html
@@ -243,6 +243,7 @@
 <a href="Whispers of my life/photo33.jpg" data-lightbox="gallery"><img src="Whispers of my life/photo33.jpg" class="gallery-img"/></a>
 <a href="Whispers of my life/photo34.jpg" data-lightbox="gallery"><img src="Whispers of my life/photo34.jpg" class="gallery-img"/></a>
 <a href="Whispers of my life/photo35.jpg" data-lightbox="gallery"><img src="Whispers of my life/photo35.jpg" class="gallery-img"/></a>
+<a href="Whispers of my life/photo36.jpg" data-lightbox="gallery"><img src="Whispers of my life/photo36.jpg" class="gallery-img"/></a>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox-plus-jquery.min.js"></script>
 
