--- a/alexia.html
+++ b/alexia.html
@@ -189,11 +189,11 @@
   <p>
     <br>
 * 🇬🇷 *   
-Κάποιοι άνθρωποι σημαδεύουν την ζωή μας για πάντα.<br><br>
+Κάποιοι άνθρωποι σημαδεύουν την ζωή μας για πάντα <3 .<br><br>
 
 
 * 🇬🇧 *  
-Some people leave a mark on our lives forever.<br><br>
+Some people leave a mark on our lives forever <3 .<br><br>
 
 </section>
 
