--- a/index.html
+++ b/index.html
@@ -282,37 +282,40 @@ body {
 
     <div class="hero"></div>
   
+
 <script>
 const slides = [
-  'index/slide1.jpg',
-  'index/slide2.jpg',
-  'index/slide3.jpg',
-  'index/slide4.jpg',
-  'index/slide5.jpg',
-  'index/slide6.jpg',
-  'index/slide7.jpg',
-  'index/slide8.jpg',
-  'index/slide9.jpg',
-  'index/slide10.jpg',
-  'index/slide11.jpg',
-  'index/slide12.jpg',
-  'index/slide13.jpg',
-  'index/slide14.jpg',
-  'index/slide15.jpg',
-  'index/slide16.jpg'
+  { image: 'index/slide1.jpg', link: 'Whispers of my life.html' },
+  { image: 'index/slide2.jpg', link: 'colored_street.html' },
+  { image: 'index/slide3.jpg', link: 'at_work.html' },
+  { image: 'index/slide4.jpg', link: 'Guca.html' },
+  { image: 'index/slide5.jpg', link: 'konstantinopoli.html' },
+  { image: 'index/slide6.jpg', link: 'mikra_xamogela.html' },
+  { image: 'index/slide7.jpg', link: 'zante.html' },
+  { image: 'index/slide8.jpg', link: 'topia.html' },
+  { image: 'index/slide9.jpg', link: 'napoli.html' },
+  { image: 'index/slide10.jpg', link: 'paris.html' },
+  { image: 'index/slide11.jpg', link: 'patra.html' },
+  { image: 'index/slide12.jpg', link: 'carnival.html' },
+  { image: 'index/slide13.jpg', link: 'santorini.html' },
+  { image: 'index/slide14.jpg', link: 'faces.html' },
+  { image: 'index/slide15.jpg', link: 'No_rolling_stones.html' },
+  { image: 'index/slide16.jpg', link: 'alexia.html' }
 ];
 
 let current = 0;
 const hero = document.querySelector('.hero');
 
 function showNextSlide() {
-  hero.style.backgroundImage = `url('${slides[current]}')`;
+  const slide = slides[current];
+  hero.innerHTML = `<a href="${slide.link}" style="display:block;width:100%;height:100%;"><div style="width:100%;height:100%;background:url('${slide.image}') center/contain no-repeat;"></div></a>`;
   current = (current + 1) % slides.length;
 }
 
 setInterval(showNextSlide, 4000);
 window.onload = showNextSlide;
 </script>
+
     
 <style>
 .mySlides {
