--- a/index_en.html
+++ b/index_en.html
@@ -280,29 +280,30 @@ nav a:hover {
   
 <script>
 const slides = [
-  'index/slide1.jpg',
-  'index/slide2.jpg',
-  'index/slide3.jpg',
-  'index/slide4.jpg',
-  'index/slide5.jpg',
-  'index/slide6.jpg',
-  'index/slide7.jpg',
-  'index/slide8.jpg',
-  'index/slide9.jpg',
-  'index/slide10.jpg',
-  'index/slide11.jpg',
-  'index/slide12.jpg',
-  'index/slide13.jpg',
-  'index/slide14.jpg',
-  'index/slide15.jpg',
-  'index/slide16.jpg'
+  { img: 'index/slide1.jpg', link: 'Whispers of my life.html' },
+  { img: 'index/slide2.jpg', link: 'colored_street.html' },
+  { img: 'index/slide3.jpg', link: 'at_work.html' },
+  { img: 'index/slide4.jpg', link: 'Guca.html' },
+  { img: 'index/slide5.jpg', link: 'konstantinopoli.html' },
+  { img: 'index/slide6.jpg', link: 'mikra_xamogela.html' },
+  { img: 'index/slide7.jpg', link: 'zante.html' },
+  { img: 'index/slide8.jpg', link: 'topia.html' },
+  { img: 'index/slide9.jpg', link: 'napoli.html' },
+  { img: 'index/slide10.jpg', link: 'paris.html' },
+  { img: 'index/slide11.jpg', link: 'patra.html' },
+  { img: 'index/slide12.jpg', link: 'carnival.html' },
+  { img: 'index/slide13.jpg', link: 'santorini.html' },
+  { img: 'index/slide14.jpg', link: 'faces.html' },
+  { img: 'index/slide15.jpg', link: 'No_rolling_stones.html' },
+  { img: 'index/slide16.jpg', link: 'alexia.html' }
 ];
 
 let current = 0;
 const hero = document.querySelector('.hero');
 
 function showNextSlide() {
-  hero.style.backgroundImage = `url('${slides[current]}')`;
+  const slide = slides[current];
+  hero.innerHTML = `<a href="${slide.link}" style="display:block;width:100%;height:100%;"><div style="width:100%;height:100%;background-image:url('${slide.img}');background-size:contain;background-repeat:no-repeat;background-position:center;"></div></a>`;
   current = (current + 1) % slides.length;
 }
 
