--- a/carnival.html
+++ b/carnival.html
@@ -198,7 +198,7 @@
 <a href="carnival/photo28.jpg" data-lightbox="gallery"><img src="carnival/photo28.jpg" class="gallery-img"/></a>
 <a href="carnival/photo29.jpg" data-lightbox="gallery"><img src="carnival/photo29.jpg" class="gallery-img"/></a>
 <a href="carnival/photo30.jpg" data-lightbox="gallery"><img src="carnival/photo30.jpg" class="gallery-img"/></a>
-
+<a href="carnival/photo31.jpg" data-lightbox="gallery"><img src="carnival/photo31.jpg" class="gallery-img"/></a>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox-plus-jquery.min.js"></script>
 
