--- a/faces.html
+++ b/faces.html
@@ -193,6 +193,7 @@
 <a href="faces/photo28.jpg" data-lightbox="gallery"><img src="faces/photo28.jpg" class="gallery-img"/></a>
 <a href="faces/photo29.jpg" data-lightbox="gallery"><img src="faces/photo29.jpg" class="gallery-img"/></a>
 <a href="faces/photo30.jpg" data-lightbox="gallery"><img src="faces/photo30.jpg" class="gallery-img"/></a>
+<a href="faces/photo31.jpg" data-lightbox="gallery"><img src="faces/photo31.jpg" class="gallery-img"/></a>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox-plus-jquery.min.js"></script>
 
