--- a/No_rolling_stones.html
+++ b/No_rolling_stones.html
@@ -192,6 +192,8 @@
 <a href="no_rolling_stones/photo28.jpg" data-lightbox="gallery"><img src="no_rolling_stones/photo28.jpg" class="gallery-img"/></a>
 <a href="no_rolling_stones/photo29.jpg" data-lightbox="gallery"><img src="no_rolling_stones/photo29.jpg" class="gallery-img"/></a>
 <a href="no_rolling_stones/photo30.jpg" data-lightbox="gallery"><img src="no_rolling_stones/photo30.jpg" class="gallery-img"/></a>
+<a href="no_rolling_stones/photo31.jpg" data-lightbox="gallery"><img src="no_rolling_stones/photo31.jpg" class="gallery-img"/></a>
+<a href="no_rolling_stones/photo32.jpg" data-lightbox="gallery"><img src="no_rolling_stones/photo32.jpg" class="gallery-img"/></a>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox-plus-jquery.min.js"></script>
 
