--- a/faces.html
+++ b/faces.html
@@ -194,6 +194,13 @@
 <a href="faces/photo29.jpg" data-lightbox="gallery"><img src="faces/photo29.jpg" class="gallery-img"/></a>
 <a href="faces/photo30.jpg" data-lightbox="gallery"><img src="faces/photo30.jpg" class="gallery-img"/></a>
 <a href="faces/photo31.jpg" data-lightbox="gallery"><img src="faces/photo31.jpg" class="gallery-img"/></a>
+<a href="faces/photo32.jpg" data-lightbox="gallery"><img src="faces/photo32.jpg" class="gallery-img"/></a>
+<a href="faces/photo33.jpg" data-lightbox="gallery"><img src="faces/photo33.jpg" class="gallery-img"/></a>
+<a href="faces/photo34.jpg" data-lightbox="gallery"><img src="faces/photo34.jpg" class="gallery-img"/></a>
+<a href="faces/photo35.jpg" data-lightbox="gallery"><img src="faces/photo35.jpg" class="gallery-img"/></a>
+<a href="faces/photo36.jpg" data-lightbox="gallery"><img src="faces/photo36.jpg" class="gallery-img"/></a>
+<a href="faces/photo37.jpg" data-lightbox="gallery"><img src="faces/photo37.jpg" class="gallery-img"/></a>
+<a href="faces/photo38.jpg" data-lightbox="gallery"><img src="faces/photo38.jpg" class="gallery-img"/></a>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox-plus-jquery.min.js"></script>
 
