--- a/carnival.html
+++ b/carnival.html
@@ -199,6 +199,10 @@
 <a href="carnival/photo29.jpg" data-lightbox="gallery"><img src="carnival/photo29.jpg" class="gallery-img"/></a>
 <a href="carnival/photo30.jpg" data-lightbox="gallery"><img src="carnival/photo30.jpg" class="gallery-img"/></a>
 <a href="carnival/photo31.jpg" data-lightbox="gallery"><img src="carnival/photo31.jpg" class="gallery-img"/></a>
+<a href="carnival/photo32.jpg" data-lightbox="gallery"><img src="carnival/photo32.jpg" class="gallery-img"/></a>
+<a href="carnival/photo33.jpg" data-lightbox="gallery"><img src="carnival/photo33.jpg" class="gallery-img"/></a>
+<a href="carnival/photo34.jpg" data-lightbox="gallery"><img src="carnival/photo34.jpg" class="gallery-img"/></a>
+<a href="carnival/photo35.jpg" data-lightbox="gallery"><img src="carnival/photo35.jpg" class="gallery-img"/></a>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox-plus-jquery.min.js"></script>
 
